--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,7 +138,7 @@
         <!-- Category Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <h1 class="text-center mb-5 wow fadeInUp reading12 "  data-wow-delay="0.1s">Explore By Category</h1>
+                <h1 class="text-center mb-5 wow fadeInUp reading12 "  data-wow-delay="0.1s">Adaptive Features</h1>
                 <div class="row g-4">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp"  data-wow-delay="0.1s" >
                         <a class="cat-item rounded p-4" id="mask-button" onclick="buttonPressed()"  style="cursor: pointer;">
@@ -202,26 +202,28 @@
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                         <div class="row g-0 about-bg rounded overflow-hidden">
                             <div class="col-6 text-start">
-                                <img class="img-fluid w-100" src="/img/ab-1.jpg" style="height: 100%;">
+                                <img class="img-fluid w-100" src="/img/ab-1.jpg" style="height: 120%;">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid" src="/img/ab-2.jpg" style="width: 90%; margin-top: 8%;height: 88%;">
+                                <img class="img-fluid" src="/img/ab-2.jpg" style="width: 100%;height: 100%;">
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid" src="/img/ab-3.jpg" style="width: 90%;">
+                                <img class="img-fluid" src="/img/ab-3.jpg" style="width: 100%;margin-top: 36px;height:110%;">
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid w-100" src="/img/ab-4.jpg" >
+                                <img class="img-fluid w-100" src="/img/ab-4.jpg" style="height: 100%;" >
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeIn " data-wow-delay="0.5s">
                         <h1 class="mb-4 reading12">We Help To Get The Best Job And Find A Talent</h1>
-                        <p class="mb-4 reading12">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Tempor erat elitr rebum at clita</p>
-                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Clita duo justo magna dolore erat amet</p>
-                        <a class="btn btn-primary py-3 px-5 mt-3 reading12" href="">Read More</a>
+                        <p class="mb-4 reading12">Welcome to Empower, where we believe that diversity is not just a buzzword; it's the heart and soul of who we are. We are a job application platform dedicated to empowering individuals with disabilities to thrive in the professional world.
+                           Our journey began with a simple yet profound vision: to create a space where everyone, regardless of their physical or cognitive challenges, could find meaningful employment opportunities. We understand that disability is not a limitation but rather a unique perspective, and we are committed to breaking down barriers and reshaping the job application landscape.</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Inclusivity</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Tailored Support</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Enlightened Employers</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Advocacy</p>
+                        <a class="btn btn-primary py-3 px-5 mt-3 reading12" href="/about">Read More</a>
                     </div>
                 </div>
             </div>
