--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
     <a href="/" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
-        <h1 class="m-0 text-primary">JobEntry</h1>
+        <h1 class="m-0 text-primary">Empower</h1>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="/" class="nav-item nav-link active reading12 ">Home</a>
-            <a href="" class="nav-item nav-link reading12">About</a>
-            <a href="/uploadResume" class="nav-item nav-link reading12">Upload Resume</a>
+            <a href="/" class="nav-item nav-link active reading12 " id="home">Home</a>
+            <a href="/about" class="nav-item nav-link reading12" id="about" >About</a>
+            <a href="/uploadResume" class="nav-item nav-link reading12" id="upload">Upload Resume</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle reading12" data-bs-toggle="dropdown">Jobs</a>
                 <div class="dropdown-menu rounded-0 m-0">
@@ -22,3 +22,4 @@
         <a href="reg" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block reading12" id="changable">Registration <i class="fa fa-arrow-right ms-3"></i></a>
     </div>
 </nav>
+
