--- a/public/css/style.css
+++ b/public/css/style.css
@@ -240,8 +240,9 @@
 }
 
 .page-header {
-    background: linear-gradient(rgba(43, 57, 64, .5), rgba(43, 57, 64, .5)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(43, 57, 64, .5), rgba(43, 57, 64, .5)), url(../img/bg-2.jpg) center center no-repeat;
     background-size: cover;
+    background-size: 1500px 450px;
 }
 
 .breadcrumb-item + .breadcrumb-item::before {
