--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,10 @@
 
     <!-- Template Stylesheet -->
     <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/video.css" rel="stylesheet">
+
+
+
 
     <style>
         .reading-mask,#job-mask {
@@ -119,14 +123,30 @@
                             <div class="col-md-4">
                                 <select class="form-select border-0">
                                     <option class="reading12" selected>Location</option>
-                                    <option class="reading12" value="1">Location 1</option>
-                                    <option class="reading12" value="2">Location 2</option>
-                                    <option class="reading12" value="3">Location 3</option>
+                                    <option class="reading12" value="1">Cairo</option>
+                                    <option class="reading12" value="2">Alex</option>
+                                    <option class="reading12" value="3">US</option>
+                                    <option class="reading12" value="4">Remotely</option>
                                 </select>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-2">
+
+                        <button class="chatBtn" onclick="openForm()">
+                            <svg height="1.6em" fill="white" xml:space="preserve" viewBox="0 0 1000 1000" y="0px" x="0px" version="1.1">
+                              <path d="M881.1,720.5H434.7L173.3,941V720.5h-54.4C58.8,720.5,10,671.1,10,610.2v-441C10,108.4,58.8,59,118.9,59h762.2C941.2,59,990,108.4,990,169.3v441C990,671.1,941.2,720.5,881.1,720.5L881.1,720.5z M935.6,169.3c0-30.4-24.4-55.2-54.5-55.2H118.9c-30.1,0-54.5,24.7-54.5,55.2v441c0,30.4,24.4,55.1,54.5,55.1h54.4h54.4v110.3l163.3-110.2H500h381.1c30.1,0,54.5-24.7,54.5-55.1V169.3L935.6,169.3z M717.8,444.8c-30.1,0-54.4-24.7-54.4-55.1c0-30.4,24.3-55.2,54.4-55.2c30.1,0,54.5,24.7,54.5,55.2C772.2,420.2,747.8,444.8,717.8,444.8L717.8,444.8z M500,444.8c-30.1,0-54.4-24.7-54.4-55.1c0-30.4,24.3-55.2,54.4-55.2c30.1,0,54.4,24.7,54.4,55.2C554.4,420.2,530.1,444.8,500,444.8L500,444.8z M282.2,444.8c-30.1,0-54.5-24.7-54.5-55.1c0-30.4,24.4-55.2,54.5-55.2c30.1,0,54.4,24.7,54.4,55.2C336.7,420.2,312.3,444.8,282.2,444.8L282.2,444.8z"></path>
+                            </svg>
+                            <span class="tooltip">Chat</span>
+                          </button>
+                          
+                          <form class="form" id="form" style="display: none;">
+                            <input class="input" type="text" placeholder="Name">
+                            <input class="input" type="text" placeholder="E-Mail I.D.">
+                            <textarea class="textarea" placeholder="Enter message"></textarea> 
+                            <center><button class="button">Submit</button></center>
+                          </form>
+                        
                         <button  class="btn btn-dark border-0 w-100 reading12">Search</button>
                     </div>
                 </div>
@@ -240,17 +260,38 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeIn " data-wow-delay="0.5s">
-                        <h1 class="mb-4 reading12">We Help To Get The Best Job And Find A Talent</h1>
-                        <p class="mb-4 reading12">Leverage Supportive Resources: Make use of available resources and support networks</p>
-                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Embrace Your Unique Abilities</p>
-                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Leverage Supportive Resources</p>
-                        <p><i class="fa fa-check text-primary me-3 reading12"></i> Encourage employers to create diverse and accessible work environments</p>
-                        <a class="btn btn-primary py-3 px-5 mt-3 reading12" href="">Read More</a>
+                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                        <h1 class="mb-4">We Help To Get The Best Job And Find A Talent</h1>
+                        <p class="mb-4"><i class="fa fa-check text-primary me-3"></i>We help people with autism find jobs that fit them. We understand that people with autism may learn differently, so we work with them to find jobs that are a good match</p>
+                        <p class="mb-4"><i class="fa fa-check text-primary me-3"></i>We offer job training and placement services</p>
+                        <p class="mb-4"><i class="fa fa-check text-primary me-3"></i>We work with employers to create a supportive </p>
+                        <p class="mb-4"><i class="fa fa-check text-primary me-3"></i> We provide resources and support to help people with autism succeed in their careers, such as resume writing assistance.</p>
+                        <p class="mb-4"><i class="fa fa-check text-primary me-3"></i> We believe that everyone deserves the opportunity to have a fulfilling career.</p>
+                        <a class="btn btn-primary py-3 px-5 mt-3" href="#" onclick="showVideo();">Watch Video</a>
                     </div>
-                </div>
-            </div>
-        </div>
+                    
+                    <div class="popup" id="videoPopup">
+                        <video src="autizm_vid.mp4" controls="true" autoplay class="video"></video>
+                        <img src="/img/close.png" onclick="closeVideo();" class="close" alt="">
+                    </div>
+                    
+                    <script>
+                        function showVideo() {
+                            var popup = document.getElementById("videoPopup");
+                            var video = popup.querySelector(".video");
+                            popup.classList.add("active");
+                            video.play();
+                        }
+                    
+                        function closeVideo() {
+                            var popup = document.getElementById("videoPopup");
+                            var video = popup.querySelector(".video");
+                            popup.classList.remove("active");
+                            video.pause();
+                            video.currentTime = 0;
+                        }
+                    </script>
+               
         <!-- About End -->
 
 
@@ -447,17 +488,17 @@
 
 
        
+    <!-- JavaScript Libraries -->
      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
      <script src="/lib/wow/wow.min.js"></script>
      <script src="/lib/easing/easing.min.js"></script>
      <script src="/lib/waypoints/waypoints.min.js"></script>
      <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
- 
+     <script src="'public\js\chat.js"></script>
      
+     <!-- Template Javascript -->
      <script src="/js/main.js"></script>
-     <script src="/js/readingMask.js"></script>
-     <script src="./js/screen_reader.js"></script>
  
     
 
