--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,6 +52,7 @@
 </head>
 
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/ee4053c9b9.js" crossorigin="anonymous"></script>
 
     <div class="container-xxl bg-white p-0 "  >
@@ -144,7 +145,7 @@
                             <input class="input" type="text" placeholder="Name">
                             <input class="input" type="text" placeholder="E-Mail I.D.">
                             <textarea class="textarea" placeholder="Enter message"></textarea> 
-                            <center><button class="button">Submit</button></center>
+                            <button class="button">Submit</button>
                           </form>
                         
                         <button  class="btn btn-dark border-0 w-100 reading12">Search</button>
@@ -154,7 +155,7 @@
         </div>
         <!-- Search End -->
 
-        <div id="readingMask" class="reading-mask"></div>
+        <div id="readingMask" class="reading-mask" style="display: none;"></div>
 
         <!-- Category Start -->
         <div class="container-xxl py-5">
@@ -188,8 +189,8 @@
                     
                     <!-- "View Links" button with id="viewLinksIndex" -->
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <a class="cat-item rounded p-4" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#linksModal" id="viewLinksIndex">
-                            <i class="fa-solid fa-link text-primary mb-4"></i>
+                        <a class="cat-item rounded p-4" data-bs-toggle="modal" data-bs-target="#linksModal" id="viewLinksIndex">
+                            <i class="fa-solid fa-link text-primary mb-4" style="font-size: 2.3em;"></i>
                             <h6 class="mb-3">View Links</h6>
                         </a>
                     </div>
@@ -271,7 +272,7 @@
                         <a class="btn btn-primary py-3 px-5 mt-3 reading12" href="/about">Read More</a>
                     </div>
                     
-                    <div class="popup" id="videoPopup">
+                    <!-- <div class="popup" id="videoPopup">
                         <video src="autizm_vid.mp4" controls="true" autoplay class="video"></video>
                         <img src="/img/close.png" onclick="closeVideo();" class="close" alt="">
                     </div>
@@ -291,7 +292,7 @@
                             video.pause();
                             video.currentTime = 0;
                         }
-                    </script>
+                    </script> -->
                
         <!-- About End -->
 
@@ -301,35 +302,36 @@
             <div class="container">
                 <h1 class="text-center mb-5 wow fadeInUp reading12" data-wow-delay="0.1s">Job Listing</h1>
                 <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
+                    <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5" id="myTabs">
                         <li class="nav-item">
-                            <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 active" data-bs-toggle="pill" href="#tab-1">
+                            <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 navlink active" data-bs-toggle="pill" href="#tab-1" >
                                 <h6 class="mt-n1 mb-0 reading12">Featured</h6>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#tab-2">
+                            <a class="d-flex align-items-center text-start mx-3 pb-3 navlink" data-bs-toggle="pill" href="#tab-2">
                                 <h6 class="mt-n1 mb-0 reading12">Onsite</h6>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#tab-3">
+                            <a class="d-flex align-items-center text-start mx-3 me-0 pb-3 navlink" data-bs-toggle="pill" href="#tab-3">
                                 <h6 class="mt-n1 mb-0 reading12">Offsite</h6>
                             </a>
                         </li>
                     </ul>
-                    <div id="job-mask" ></div>
-                    <div class="tab-content">
-                        <div id="tab-1" class="tab-pane fade show p-0 active">
-                            <%if(jobs!==""){%>
-                                <%jobs.forEach((job)=>{%> 
-                            <div class="job-item p-4 mb-4">
+
+                    <div id="job-mask" style="display: none;"></div>
+                    <% function generateJobItems(filterFn) {
+                        if (jobs !== "") {
+                          jobs.forEach((job) => {
+                            if (filterFn(job)) { %>
+                              <div class="job-item p-4 mb-4">
                                 <div class="row g-4">
                                     <div class="col-sm-12 col-md-8 d-flex align-items-center">
                                         <img class="flex-shrink-0 img-fluid border rounded" id="cimg"  src="/img/<%=job.Company%>.jpg" alt="<%=job.Company%> Logo" style="width: 80px; height: 80px;">
                                         <div class="text-start ps-4">
                                             <h5 class="mb-3"><%=job.Name%></h5>
-                                            <h5 id=<%=job.Company%>  style="display:none;"><%=job.Company%></h5>
+                                            <h5 id="<%=job.Company%>" style="display:none;"><%=job.Company%></h5>
                                             <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i><%=job.Location%></span>
                                             <span class="text-truncate me-3"><i class="fa-solid fa-map-pin" style="color:rgb(18, 18, 104)"></i> <%=job.Place%></span>
                                             <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i><%=job.Salary%></span>
@@ -338,86 +340,61 @@
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                         <div class="d-flex mb-3">
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
-                                            <a class="btn btn-primary" href="/job-detail/<%=job._id%>">Apply Now</a>
+                                            <button class="btn btn-primary view-button" data-jobid="<%=job._id%>">View Details</button>
                                         </div>
                                         <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
                                     </div>
                                 </div>
-                            </div>
-                            <%})%>
-                            <%}%>
-                            
-                            
-                            <a class="btn btn-primary py-3 px-5" href="">Browse More Jobs</a>
+                              </div>
+                            <% }
+                          });
+                        }
+                      } %>
+                    <div class="tab-content">
+                        <div id="tab-1" class="tab-pane fade show p-0 active" >
+                            <% generateJobItems((job) => {
+                            return true; 
+                            }); %>   
                         </div>
+
                         <div id="tab-2" class="tab-pane fade show p-0">
-                            <%if(jobs!==""){%>
-                                <%jobs.forEach((job)=>{%> 
-                                    <% if(job.Place.toLowerCase().includes("hybrid") || job.Place.toLowerCase().includes("onsite")){%>
-                                        <div class="job-item p-4 mb-4">
-                                            <div class="row g-4">
-                                                <div class="col-sm-12 col-md-8 d-flex align-items-center">
-                                                    <img class="flex-shrink-0 img-fluid border rounded" id="cimg"  src="/img/<%=job.Company%>.jpg" alt="<%=job.Company%> Logo" style="width: 80px; height: 80px;">
-                                                    <div class="text-start ps-4">
-                                                        <h5 class="mb-3"><%=job.Name%></h5>
-                                                        <h5 id="company" style="display:none;"><%=job.Company%></h5>
-                                                        <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i><%=job.Location%></span>
-                                                        <span class="text-truncate me-3"><i class="fa-solid fa-map-pin" style="color:rgb(18, 18, 104)"></i> <%=job.Place%></span>
-                                                        <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i><%=job.Salary%></span>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
-                                                    <div class="d-flex mb-3">
-                                                        <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
-                                                        <a class="btn btn-primary" href="">Apply Now</a>
-                                                    </div>
-                                                    <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
-                                                </div>
-                                            </div>
-                                        </div>
-                                     <% } %>
-                            <%})%>
-                            <%}%>     
-                            
-                            <a class="btn btn-primary py-3 px-5" href="">Browse More Jobs</a>
+                            <% generateJobItems((job) => {
+                            return job.Place.toLowerCase().includes("hybrid") || job.Place.toLowerCase().includes("onsite");
+                            }); %>  
                         </div>
+
                         <div id="tab-3" class="tab-pane fade show p-0">
-                            <%if(jobs!==""){%>
-                                <%jobs.forEach((job)=>{%> 
-                                    <% if(job.Place.toLowerCase().includes("hybrid") || job.Place.toLowerCase().includes("remote")
-                                    || job.Place.toLowerCase().includes("offsite") ){%>
-                                        <div class="job-item p-4 mb-4">
-                                            <div class="row g-4">
-                                                <div class="col-sm-12 col-md-8 d-flex align-items-center">
-                                                    <img class="flex-shrink-0 img-fluid border rounded" id="cimg"  src="/img/<%=job.Company%>.jpg" alt="<%=job.Company%> Logo" style="width: 80px; height: 80px;">
-                                                    <div class="text-start ps-4">
-                                                        <h5 class="mb-3"><%=job.Name%></h5>
-                                                        <h5 id="company" style="display:none;"><%=job.Company%></h5>
-                                                        <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i><%=job.Location%></span>
-                                                        <span class="text-truncate me-3"><i class="fa-solid fa-map-pin" style="color:rgb(18, 18, 104)"></i> <%=job.Place%></span>
-                                                        <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i><%=job.Salary%></span>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
-                                                    <div class="d-flex mb-3">
-                                                        <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
-                                                        <a class="btn btn-primary" href="">Apply Now</a>
-                                                    </div>
-                                                    <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
-                                                </div>
-                                            </div>
-                                        </div>
-                                     <% } %>
-                            <%})%>
-                            <%}%> 
-                            
-                           
-                            <a class="btn btn-primary py-3 px-5" href="">Browse More Jobs</a>
+                            <% generateJobItems((job) => {
+                            return job.Place.toLowerCase().includes("hybrid") || job.Place.toLowerCase().includes("remot") || job.Place.toLowerCase().includes("offsite");
+                            }); %>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <script>
+                $(document).ready(function() {
+                    $('#myTabs a.navlink').click(function(e) {
+                    e.preventDefault(); 
+                    $('#myTabs a.navlink').removeClass('active');
+                    $(this).addClass('active');
+                    var tabId = $(this).attr('href');
+                    $('.tab-pane').removeClass('active show'); 
+                    $(tabId).addClass('active show'); 
+                    });
+                });
+
+                $(".view-button").click(function () {
+                const jobId = $(this).data("jobid");
+                redirectToJobDetails(jobId);
+                });
+                
+                function redirectToJobDetails(jobId) {
+                window.location.href = `/job-detail/${jobId}`;
+                }    
+
+        </script>
         <!-- Jobs End -->
 
 
@@ -496,10 +473,11 @@
      <script src="/lib/easing/easing.min.js"></script>
      <script src="/lib/waypoints/waypoints.min.js"></script>
      <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-     <script src="'public\js\chat.js"></script>
      
      <!-- Template Javascript -->
      <script src="/js/main.js"></script>
+     <script src="/js/readingMask.js"></script>
+     <script src="/js/screen_reader.js"></script>
  
     
 
