--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -62,7 +62,7 @@
                         </clipPath>
                     </defs>
                 </svg>
-                <h2 style="color: white;">Our<span style="color: white;">Name</span></h2>
+                <h2 style="color: white;"><span style="color: white;">Empower</span></h2>
             </div>
             <div class="close" id="close-btn">
                 <i class='bx bxs-log-out-circle'></i>
@@ -103,7 +103,7 @@
                     <label for="job-select">Select Job:</label>
                     <select class="selecting" id="job-select" name="job">
                         <% if(sortedData!=""){%>
-                            <option value=<%=job%><%=job%>></option>
+                            <option value=<%=job.Name%><%=job.Name%>></option>
                         <%}else{%>
                         <option class="options" value="">select job</option>
                         <%}%>
@@ -119,7 +119,7 @@
                     <label for="company-select">Select Company:</label>
                     <select class="selecting" id="company-select" name="company" >
                         <% if(sortedData!=""){%>
-                            <option value=<%=company%><%=company%>></option>
+                            <option value=<%=job.Company%><%=job.Company%>></option>
                         <%}else{%>
                         <option class="options"  value="">select company</option>
                         <%}%>
@@ -150,8 +150,10 @@
                         onclick="openResumePopup('/uploads/'+'<%=fileName%>'+' resume.pdf')">View Resume </a>  
                         <a href="#" class="view-profile-button" 
                         onclick="openResumePopup('/uploads/'+'<%=fileName%>'+' resume.pdf')">View Profile </a> 
-                        <a href="#" class="accept-button" 
-                        onclick="openResumePopup('/uploads/'+'<%=fileName%>'+' resume.pdf')">Accept CV </a> 
+                         
+                        <p id="userId" style="display: none;"><%=sortedData[k].user._id%></p>
+                        <p id="jobId" style="display: none;"><%=job._id%></p>
+                        <a class="accept-button" href="#" id="<%=sortedData[k].user._id%>" onclick="accept()">Accept CV </a> 
                     </div>
                     
                    
