--- a/views/addposition.ejs
+++ b/views/addposition.ejs
@@ -12,7 +12,6 @@
 
 </head>
 <body>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <aside>
         <div class="top">
@@ -106,17 +105,6 @@
             <div class="class9">
                 <form id="myFrom21" method='post' action='/addposition' enctype="multipart/form-data">
                     <section id="addtitle" class="addtitle" style="display: flex; margin-left: -13%;">
-                        <label class="custum-file-upload" id="custum-file-upload" for="file">
-                            <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="" viewBox="0 0 24 24"><g stroke-width="0" id="SVGRepo_bgCarrier"></g><g stroke-linejoin="round" stroke-linecap="round" id="SVGRepo_tracerCarrier"></g><g id="SVGRepo_iconCarrier"> <path fill="" d="M10 1C9.73478 1 9.48043 1.10536 9.29289 1.29289L3.29289 7.29289C3.10536 7.48043 3 7.73478 3 8V20C3 21.6569 4.34315 23 6 23H7C7.55228 23 8 22.5523 8 22C8 21.4477 7.55228 21 7 21H6C5.44772 21 5 20.5523 5 20V9H10C10.5523 9 11 8.55228 11 8V3H18C18.5523 3 19 3.44772 19 4V9C19 9.55228 19.4477 10 20 10C20.5523 10 21 9.55228 21 9V4C21 2.34315 19.6569 1 18 1H10ZM9 7H6.41421L9 4.41421V7ZM14 15.5C14 14.1193 15.1193 13 16.5 13C17.8807 13 19 14.1193 19 15.5V16V17H20C21.1046 17 22 17.8954 22 19C22 20.1046 21.1046 21 20 21H13C11.8954 21 11 20.1046 11 19C11 17.8954 11.8954 17 13 17H14V16V15.5ZM16.5 11C14.142 11 12.2076 12.8136 12.0156 15.122C10.2825 15.5606 9 17.1305 9 19C9 21.2091 10.7909 23 13 23H20C22.2091 23 24 21.2091 24 19C24 17.1305 22.7175 15.5606 20.9844 15.122C20.7924 12.8136 18.858 11 16.5 11Z" clip-rule="evenodd" fill-rule="evenodd"></path> </g></svg>
-                            </div>
-                            <div class="text">
-                               <span>Click to upload image</span>
-                               </div>
-                               <input type="file" id="file">
-                            </label>
-                            <img id="uploaded-image" class="custum-file-upload" src="#" alt="Uploaded Image" style="display: none;">
-                            
                         <div class="class12 editt12">
                             <div class="class13">
                                 <label for="title" class="labol"> <br>
@@ -132,6 +120,19 @@
                                 </div>
                             </div>
                         </div>
+                        <label class="custum-file-upload" id="custum-file-upload" for="file">
+                            <div class="icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="" viewBox="0 0 24 24"><g stroke-width="0" id="SVGRepo_bgCarrier"></g><g stroke-linejoin="round" stroke-linecap="round" id="SVGRepo_tracerCarrier"></g><g id="SVGRepo_iconCarrier"> <path fill="" d="M10 1C9.73478 1 9.48043 1.10536 9.29289 1.29289L3.29289 7.29289C3.10536 7.48043 3 7.73478 3 8V20C3 21.6569 4.34315 23 6 23H7C7.55228 23 8 22.5523 8 22C8 21.4477 7.55228 21 7 21H6C5.44772 21 5 20.5523 5 20V9H10C10.5523 9 11 8.55228 11 8V3H18C18.5523 3 19 3.44772 19 4V9C19 9.55228 19.4477 10 20 10C20.5523 10 21 9.55228 21 9V4C21 2.34315 19.6569 1 18 1H10ZM9 7H6.41421L9 4.41421V7ZM14 15.5C14 14.1193 15.1193 13 16.5 13C17.8807 13 19 14.1193 19 15.5V16V17H20C21.1046 17 22 17.8954 22 19C22 20.1046 21.1046 21 20 21H13C11.8954 21 11 20.1046 11 19C11 17.8954 11.8954 17 13 17H14V16V15.5ZM16.5 11C14.142 11 12.2076 12.8136 12.0156 15.122C10.2825 15.5606 9 17.1305 9 19C9 21.2091 10.7909 23 13 23H20C22.2091 23 24 21.2091 24 19C24 17.1305 22.7175 15.5606 20.9844 15.122C20.7924 12.8136 18.858 11 16.5 11Z" clip-rule="evenodd" fill-rule="evenodd"></path> </g></svg>
+                            </div>
+                            <div class="text">
+                               <span>Click to upload image</span>
+                               </div>
+                               <input type="file" id="file" accept="image/png, image/jpeg, image/webp"
+                               multiple>
+                            </label>
+                            <img id="uploaded-image" class="custum-file-upload" src="#" alt="Uploaded Image" style="display: none;">
+                            
+                       
                     </section>
 
                     <section id="location" class="location">
@@ -296,7 +297,7 @@
 
                    
                     <section id="submit">
-                        <button class="continue-application" id="prop-submit">Submit</button>
+                        <button type="submit" class="continue-application" id="prop-submit">Submit</button>
                     </section>
                    
                 </form>
@@ -307,64 +308,10 @@
     </div>
 </div>
 
-
-   
 </body>
 </html>
-
-<script>
-    document.getElementById('file').addEventListener('change', function (e) {
-    const uploadedImage = document.getElementById('uploaded-image');
-    const imageframe=document.getElementById("custum-file-upload");
-    const file = e.target.files[0];
-
-    if (file) {
-        // Display the selected image
-        uploadedImage.style.display = 'flex';
-        uploadedImage.style.padding="1rem";
-        imageframe.style.display="none";
-        uploadedImage.src = URL.createObjectURL(file);
-    } else {
-        // If no file is selected, hide the image
-        uploadedImage.style.display = 'none';
-        uploadedImage.src = '#'; // Clear the image source
-    }
-});
-let number12=450;
-let i=2;
-let count=0;
-function addSkill() {
-    // Get the value from the input field
-    var skill = document.getElementById("Skills").value;
-
-    // Create a new span element for the skill
-    var skillSpan = document.createElement("span");
-    skillSpan.textContent = skill;
-
-    // Append the span to the skillsContainer
-    var skillsContainer = document.getElementById("skillsContainer");
-    skillsContainer.appendChild(skillSpan);
-
-    // Clear the input field after adding the skill
-    document.getElementById("Skills").value = "";
-
-    // Check if the total width of spans exceeds 600px
-    let totalWidth = 0;
-    var spans = skillsContainer.querySelectorAll('span');
-    var ko2;
-    spans.forEach(function (span) {
-        totalWidth += span.offsetWidth + parseInt(getComputedStyle(span).marginRight);
-
-    });
-
-    // If total width exceeds 600px, add a line break (up to 4 times)
-    if (totalWidth > number12) {
-        for (var i = 0; i < 2; i++) {
-            skillsContainer.appendChild(document.createElement('br')); 
-        } 
-        count++;
-        number12*=i; 
-        i+=0.2;  
-    }
-}
-</script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+    </script>
+<script src="./js/addposition.js"></script>
