--- a/views/addposition.ejs
+++ b/views/addposition.ejs
@@ -111,7 +111,7 @@
                                     <span class="spano">Company Name *</span>
                                 </label>
                                 <div class="inputo editt">
-                                    <input id="CompanyName" name="title" spellcheck="false" class="inputo2"
+                                    <input id="CompanyName" required name="title" spellcheck="false" class="inputo2"
                                         maxlength="70" autocomplete="nope" value
                                         placeholder="Enter Company Name">
                                 </div>
@@ -145,7 +145,7 @@
                                             <span class="spano">Location *</span>
                                         </label>
                                         <div class="inputo">
-                                            <input id="loc" name="loc" list="locations" class="inputo2"
+                                            <input id="loc" required name="loc" list="locations" class="inputo2"
                                                 spellcheck="false" autocomplete="nope" value placeholder="Choose the Location">
                                             <datalist id="locations" class="inputo2">
                                                 <option value="Cairo">
@@ -179,7 +179,7 @@
                                     <span class="spano">Job Title *</span>
                                 </label>
                                 <div class="inputo">
-                                    <input id="title" name="title" spellcheck="false" class="inputo2"
+                                    <input id="title" required name="title" spellcheck="false" class="inputo2"
                                         maxlength="70" autocomplete="nope" value
                                         placeholder="Enter Job Title">
                                 </div>
@@ -197,7 +197,7 @@
                                     <span class="spano">Salary Range *</span>
                                 </label>
                                 <div class="inputo">
-                                    <input id="Salary" name="title" spellcheck="false" class="inputo2"
+                                    <input id="Salary" required name="title" spellcheck="false" class="inputo2"
                                         maxlength="70" autocomplete="nope" value
                                         placeholder="Salary Range (MIN/MAX)">
                                 </div>
@@ -233,7 +233,7 @@
                             </label>
                             <div class="calssflex">
                                 <div class="inputo onwidth">
-                                    <input type="text" id="Skills" class="inputo2" placeholder="Enter Skills Needed" />
+                                    <input type="text"  id="Skills" class="inputo2" placeholder="Enter Skills Needed" />
                                 </div>
                                 <button type="button" class="btnsearch" onclick="addSkill()">ADD</button>
                             </div>
@@ -248,7 +248,7 @@
                             <div class="radio">
                                 <div class="radio2">
                                     <div class="radio3"></div>
-                                    <label for="Rooms" class="spano2">Position Need:</label>
+                                    <label for="Rooms" required class="spano2">Position Need:</label>
                                     <div class="radio-input">
                                         <input type="radio" id="value-8" name="value3-radio" value="Junior">
                                         <label for="value-8">Junior</label>
@@ -260,7 +260,7 @@
                                 <br>
                                 <div class="radio2">
                                     <div class="radio3"></div>
-                                    <label for="BathRooms" class="spano2">Work Models:</label>
+                                    <label for="BathRooms" required class="spano2">Work Models:</label>
                                     <div class="radio-input">
                                         <input type="radio" id="value-1" name="value-radio" value="OnSite">
                                         <label for="value-1"> OnSite</label>
@@ -274,7 +274,7 @@
                                 <br>
                                     <div class="radio2">
                                         <div class="radio3"></div>
-                                        <label for="Rooms" class="spano2">Disability:</label>
+                                        <label for="Rooms"required class="spano2">Disability:</label>
                                         <div class="radio-input">
                                             <input type="radio" id="value-4" name="value2-radio" value="Blind">
                                             <label for="value-4">Blind</label>
@@ -297,6 +297,7 @@
 
                    
                     <section id="submit">
+                        <label id="prop-label" class="fade-label hidden">The Job is Added succesfully</label>
                         <button type="submit" class="continue-application" id="prop-submit">Submit</button>
                     </section>
                    
