--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -149,7 +149,7 @@
                         <a href="#" class="view-resume-button" 
                         onclick="openResumePopup('/uploads/'+'<%=fileName%>'+' resume.pdf')">View Resume </a>  
                         <a href="#" class="view-profile-button" 
-                        onclick="openResumePopup('/uploads/'+'<%=fileName%>'+' resume.pdf')">View Profile </a> 
+                        onclick=>View Profile </a> 
                          
                         <p id="userId" style="display: none;"><%=sortedData[k].user._id%></p>
                         <p id="jobId" style="display: none;"><%=job._id%></p>
