--- a/views/partials/chat.ejs
+++ b/views/partials/chat.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="chat-bar-collapsible">
-    <button id="chat-button" type="button" class="collapsible">Chat with us!
+    <button id="chat-button" type="button" class="collapsible reading12">Chat with us!
         <i id="chat-icon" style="color: #fff;" class="fa fa-fw fa-comments-o"></i>
     </button>
 
@@ -21,7 +21,7 @@
                     <div class="fixedone">
                         <div class="chat-bar-input-block">
                             <div id="userInput">
-                                <input id="textInput" class="input-box" type="text" name="msg"
+                                <input id="textInput" class="input-box reading12" type="text" name="msg"
                                     placeholder="Tap 'Enter' to send a message">
                                 <p></p>
                             </div>
@@ -48,4 +48,5 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
     </script>
+    <script src=".js/screen_reader.js"></script>
 <script src="./js/chat.js"></script>
