--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,9 +203,9 @@
                     
 
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <a class="cat-item rounded p-4" href="">
+                        <a class="cat-item rounded p-4" onclick="buttonPressed12()" style="cursor: pointer;">
                             <i class="fa-solid fa-volume-high"></i>
-                            <h6 class="mb-3 reading12">Human Resource</h6>
+                            <h6 class="mb-3 reading12">Screen Reader</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
@@ -479,8 +479,7 @@
 
      <script src="/js/main.js"></script>
      <script src="/js/readingMask.js"></script>
-     <script src="/js/screen_reader.js"></script>
- 
+     <script src="./js/screen_reader.js"></script>
     
 
 </body>
