--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -148,7 +148,7 @@
                         </div>
                         <a href="#" class="view-resume-button" 
                         onclick="openResumePopup('/uploads/'+'<%=fileName%>'+' resume.pdf')">View Resume </a>  
-                        <a href="#" class="view-profile-button" 
+                        <a href="dashboard/<%=sortedData[k].user._id%>" class="view-profile-button" 
                         onclick=>View Profile </a> 
                          
                         <p id="userId" style="display: none;"><%=sortedData[k].user._id%></p>
