--- a/views/index.ejs
+++ b/views/index.ejs
@@ -211,21 +211,21 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <a class="cat-item rounded p-4"  onclick="colorblind()" style="cursor: pointer;">
+                        <a class="cat-item rounded p-4" id="colorblind" onclick="colorblind()" style="cursor: pointer;">
                             <i class="fa-solid fa-eye speaker"></i>
                             <h6 class="mb-3 screenr12 reading12">Color Blind</h6>
                         </a>
                     </div>
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <a class="cat-item rounded p-4" onclick="textenlargement()">
-                            <i class="fa-solid fa-magnifying-glass speaker"></i>
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp"  data-wow-delay="0.1s">
+                        <a class="cat-item rounded p-4" id="textenlarge" onclick="textenlargement()" style="cursor: pointer;">
+                            <i class="fa-solid fa-magnifying-glass speaker" id="textenlargelogo"></i>
                             <h6 class="mb-3 screenr12 reading12">Text Enlargement</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="cat-item rounded p-4" href="">
-                            <i class="fa fa-3x fa-hands-helping text-primary mb-4"></i>
-                            <h6 class="mb-3 reading12">Sales & Communication</h6>
+                        <a class="cat-item rounded p-4" onclick="highlightlinks()">
+                            <i class="fa-solid fa-highlighter speaker"></i>
+                            <h6 class="mb-3 reading12 screenr12">Highlight Links</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
