--- a/views/index.ejs
+++ b/views/index.ejs
@@ -223,7 +223,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="cat-item rounded p-4" onclick="highlightlinks()">
+                        <a class="cat-item rounded p-4" onclick="highlightlinks()" style="cursor: pointer;">
                             <i class="fa-solid fa-highlighter speaker"></i>
                             <h6 class="mb-3 reading12 screenr12">Highlight Links</h6>
                         </a>
