--- a/views/index.ejs
+++ b/views/index.ejs
@@ -229,15 +229,18 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <a class="cat-item rounded p-4" href="">
-                            <i class="fa fa-3x fa-book-reader text-primary mb-4"></i>
-                            <h6 class="mb-3 reading12">Teaching & Education</h6>
+                        <a class="cat-item rounded p-4"id="hideimage" onclick="hideimages()" style="cursor: pointer;">
+                            <i class="fa-regular fa-image speaker" id="hideimagelogo"></i>
+                            <h6 class="mb-3 reading12 screenr12">Hide Images</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <a class="cat-item rounded p-4" href="">
-                            <i class="fa fa-3x fa-drafting-compass text-primary mb-4"></i>
-                            <h6 class="mb-3 reading12">Design & Creative</h6>
+                        <a class="cat-item rounded p-4" onclick="textalign()" id="textalign1" style="cursor: pointer;">
+                            <i class="fa-solid fa-align-justify speaker" id="textalign1logo"  style="display: block;"></i>
+                            <i class="fa-solid fa-align-left speaker" id="textalign1logoL" style="display: none;"></i>
+                            <i class="fa-solid fa-align-right speaker" id="textalign1logoR" style="display: none;"></i>
+                            <i class="fa-solid fa-align-center speaker" id="textalign1logoC" style="display: none;"></i>
+                            <h6 class="mb-3 reading12 screenr12">Text Align</h6>
                         </a>
                     </div>
                 </div>
