--- a/views/index.ejs
+++ b/views/index.ejs
@@ -174,7 +174,7 @@
                     </div>
 
 
-                    <div class="modal fade" id="linksModal" tabindex="-1" aria-labelledby="linksModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="linksModal" tabindex="-1" aria-labelledby="linksModalLabel" >
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -486,6 +486,7 @@
      <script src="/js/readingMask.js"></script>
      <script src="./js/screen_reader.js"></script>
      <script src="./js/accessibilities.js"></script>
+     <script src="/js/viewlinks.js"></script>
     
 
 </body>
